  displaying purposes.
- Discogs maximum search results has been increased (online services pack version 1.4).

[Fixed]
- Web module did not show the login page correctly.
- Web module you needed to login twice in order to get into the application (a 4.2.2 
  issue)
- Web module: download button was too large.


-----------------------------------------------------------------------------------------
Data Crow version 4.5                                              Released on 2023-01-19
-----------------------------------------------------------------------------------------

This version brings the old web module back to live. There are no major adjustments
since the 4.2.2 version as the goal was to get it back in, running on the latest 
libraries available. This means the web module can now be fully supported again and
makes it possible to extend the web module in the (near) future. One of the main 
things to change after this release is to make sure the UI also shows nicely on mobile
devices; it is currently not optimized for this.

[Updated]
- Java version has been uplifted from 11 to 17 as depending libraries required this.
- Updated the web module from 4.2.2 to make it compatible with Data Crow 4.5.

[New]
- Web module has been re-implemented; 
  PrimeFaces has been upgraded from version 6 to 12 (since Data Crow 4.2.2)
  The web server used to run on TomCat (embedded) and is now running Jetty 11 
  (also embedded). All required components have been uplifted to their respective
  latest version.
- Web module additions since 4.2.2:
  Images can now also be deleted, drop downs now also have an empty option. 
- Discogs.com online search for music albums has been added. 
  Reintroduced after it was removed in version 4.3 as it was no longer working
  in 4.2.2. It has been completely rewritten.
  
[Fixed]
- Fixes since Data Crow 4.2.2 for web module: 
  ~ logging off was not correctly implemented
  ~ messages were not being displayed on the web item form.