@@ -1,12 +1,0 @@
-19:50:01:132 [ALWAYS]	GUDE Logging Started
-19:50:01:132 [INFO]	SqliteResumeCache::SqliteResumeCache basedirectory is null/empty
-19:50:01:132 [ERROR]	SqliteResumeCache::CreateSqliteResumeCache creating resume cache pointer failure
-19:50:01:132 [ERROR]	Initialize resume cache pointer failure
-19:50:01:133 [INFO]	gude policy POLICY_USER limit (2,2,1) chunk 2097152, chunking (UL 0 DL 1), resXfer 1, adapt 0, NSURL 0, timeout 86400 
-19:50:01:133 [INFO]	Initialized -- gude-lib version: v0.12.1 app: gude
-19:50:13:861 [WARN]	Ignoring attempt to reinit logging to \gude at level 4 retaining 3 days of logs
-19:50:13:861 [INFO]	SqliteResumeCache::SqliteResumeCache basedirectory is null/empty
-19:50:13:861 [ERROR]	SqliteResumeCache::CreateSqliteResumeCache creating resume cache pointer failure
-19:50:13:862 [ERROR]	Initialize resume cache pointer failure
-19:50:13:862 [INFO]	gude policy POLICY_USER limit (4,4,1) chunk 2097152, chunking (UL 0 DL 1), resXfer 1, adapt 0, NSURL 1, timeout 86400 
-19:50:13:862 [INFO]	Initialized -- gude-lib version: v0.12.1 app: gude
